# feedme

./: pyproject.toml
.recipe_cache/magimix/: 18430.545494885195.pkl
src/feedme/: config.py  console.py  ingredient.py  recipe.py  scrapers.py  utils.py
tests/: test_ingredient.py  test_recipe.py  test_scrapers.py
