[tool.poetry]
name = "feedme"
version = "0.1.0"
authors = ["bcarr <benjmcarr@gmail.com>"]
description = "feed me pls"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/benjmcarr/feedme"
repository = "https://github.com/benjmcarr/feedme"
keywords = ["feedme"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.1"
pillow = "^7.1.2"
pandas = "^1.0.4"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[tool.poetry.scripts]
feedme = "feedme.console:gen_recipes"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

